CDH-38257: backport SENTRY-1108: Improve surefire execution to run tests concurrently. Could be used a test run profile for pre-commit job. (Anne Yu, reviewed by HaoHao) and integrate test run into pre-commit job.
Change-Id: I561e7e324e3797c25ab26ddd22b35945bfa7837c
Reviewed-on: http://gerrit.sjc.cloudera.com:8080/12433
Tested-by: Jenkins User
Reviewed-by: Sijie Yu <anneyu@cloudera.com>
Tested-by: Sijie Yu <anneyu@cloudera.com>